@@ -19,6 +19,8 @@ Change log 0.9 (under development)
 * The PowerMock API methods with a syntax like createPartialMockX are renamed to createXPartialMock, e.g. createPartialMockNice is renamed to createNicePartialMock to be more consistent with the normal createMock methods.
 * Added createNicePartialMockAndInvokeDefaultConstructor and createStrictPartialMockAndInvokeDefaultConstructor to the PowerMock API.
 * Updated the tutorial projects with TODO's. It should now be much easier to understand what shall be done.
+* Changed the clean-up mechanisms of PowerMock.replay(..) and PowerMock.verify(..). Should no longer clear unnecessary state.
+* Implemented two new PowerMock API methods: replayAll and verifyAll(). These can be used to replay and verify all classes and mocks created or used by the PowerMock API without having to explicitly specify each and everyone.
 
 Change log 0.8.5 (2008-10-30)
 -----------------------------
